--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,122 +1,79 @@
-
-<div class="d-flex">
-  <div class="dropdown">
-    <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-      Filtres
-    </button>
-    <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
-      <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu' }) do |f| %>
-        <%= f.input :water,
-                    as: :boolean,
-                    label: 'Eau',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
-                    %>
-        <%= f.input :trashs,
-                    as: :boolean,
-                    label: 'Déchets',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
-                    %>
-        <%= f.input :poopbag,
-                    as: :boolean,
-                    label: 'Sac à crottes',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
-                    %>
-        <%= f.input :familyfriendly,
-                    as: :boolean,
-                    label: 'Convient aux familles',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
-                    %>
-        <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
-      <% end %>
-    <%# </div> %>
-  </div>
-
-  <div class="dropdown">
-    <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-      Lieux
-    </button>
-    <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
-      <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu' }) do |f| %>
-        <%= f.input :water,
-                    as: :boolean,
-                    label: 'Eau',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
-                    %>
-        <%= f.input :trashs,
-                    as: :boolean,
-                    label: 'Déchets',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
-                    %>
-        <%= f.input :poopbag,
-                    as: :boolean,
-                    label: 'Sac à crottes',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
-                    %>
-        <%= f.input :familyfriendly,
-                    as: :boolean,
-                    label: 'Convient aux familles',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
-                    %>
-        <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
-      <% end %>
-    <%# </div> %>
-  </div>
-</div>
-
-<div class="p-3 d-flex justify-content-start">
-  <h1 class="font-weight-bold" style="color: #D19B62;">Suggestions</h1>
-</div>
-
-<div class="container w-100">
-  <% @courses.each do |course| %>
-  <%= link_to course_path(course), class: "text-decoration-none text-white" do %>
-    <div class="card mb-3">
-      <div class="card-image mb-3">
-        <div style="position: relative; border-radius: 12px 12px 0 0;height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path course.photos.last.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
-          <% if Ride.exists?(user: current_user, course: course) %>
-            <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px;"></i>
-          <% end %>
-        </div>
-      </div>
-      <div class="card-body">
-        <div class="d-flex justify-content-between">
-          <h5 class="card-title" style="color: #895f33;"><%= course.name %></h5>
-          <div class="d-flex ml-auto gap-1" style="color: #895f33;">
-            <% if course.trashs %>
-              <i class="fa fa-trash gap-1"></i>
-            <% end %>
-            <% if course.water %>
-              <i class="fa-solid fa-droplet gap-1"></i>
-            <% end %>
-            <% if course.poopbag %>
-              <i class="fa-solid fa-poo"></i>
-            <% end %>
-            <% if course.familyfriendly %>
-              <i class="fa-solid fa-people-group gap-1"></i>
-            <% end %>
-          </div>
-        </div>
-        <div class="d-flex justify-content-between" style="color: #895f33;">
-          <div>
-            <% course.average.to_i.times do %>
-              <i class="fa-solid fa-star"></i>
-            <% end %>
-            <% (5 - course.average.to_i).times do %>
-              <i class="fa-regular fa-star"></i>
-            <% end %>
-          </div>
-          <div class="card-timing-distance" style="color: #895f33;"><%= course.timing %> min - <%= course.distance %> km</div>
-        </div>
-      </div>
+<div data-controller="filter" data-filter-target="list">
+  <div class="d-flex">
+    <div class="dropdown">
+      <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+        Filtres
+      </button>
+      <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
+        <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu', data: { filter_target: "form" }} ) do |f| %>
+          <%= f.input :water,
+                      as: :boolean,
+                      label: 'Eau',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:water] == "1", data: { filter_target: "water", action: "click->filter#sort" }  }
+                      %>
+          <%= f.input :trashs,
+                      as: :boolean,
+                      label: 'Déchets',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:trashs] == "1", data: { filter_target: "trash", action: "click->filter#sort" }   }
+                      %>
+          <%= f.input :poopbag,
+                      as: :boolean,
+                      label: 'Sac à crottes',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1", data: { filter_target: "poop", action: "click->filter#sort" }   }
+                      %>
+          <%= f.input :familyfriendly,
+                      as: :boolean,
+                      label: 'Convient aux familles',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1", data: { filter_target: "fam", action: "click->filter#sort" }   }
+                      %>
+          <%# <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
+        <% end %>
+      <%# </div> %>
     </div>
-    <% end %>
-  <% end %>
+
+    <div class="dropdown">
+      <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+        Lieux
+      </button>
+      <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
+         <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu', data: { filter_target: "form" }} ) do |f| %>
+          <%= f.input :water,
+                      as: :boolean,
+                      label: 'Eau',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:water] == "1", data: { filter_target: "water", action: "click->filter#sort" }  }
+                      %>
+          <%= f.input :trashs,
+                      as: :boolean,
+                      label: 'Déchets',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:trashs] == "1", data: { filter_target: "trash", action: "click->filter#sort" }   }
+                      %>
+          <%= f.input :poopbag,
+                      as: :boolean,
+                      label: 'Sac à crottes',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1", data: { filter_target: "poop", action: "click->filter#sort" }   }
+                      %>
+          <%= f.input :familyfriendly,
+                      as: :boolean,
+                      label: 'Convient aux familles',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1", data: { filter_target: "fam", action: "click->filter#sort" }   }
+                      %>
+          <%# <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
+        <% end %>
+      <%# </div> %>
+    </div>
+  </div>
+
+  <div class="p-3 d-flex justify-content-start">
+    <h1 class="font-weight-bold" style="color: #D19B62;">Suggestions</h1>
+  </div>
+
+  <%= render "list", courses: @courses %>
 </div>
